Finalized weekday finder: JS logic and interface done.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <main id="show">
         <h1>Day of the Week Finder</h1>
-        
+
         <div class="controls">
-            <input type="date" id="dataInput">
-            <button onclick="dayFinder()">Show me!</button>
+            <input type="date" id="dataInput" placeholder="Select a date...">
+            <button id="showButton">Show me!</button>
         </div>
 
         <div id="result">
